load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "xsd_types_test",
    srcs = ["xsd_types_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "//helpers/xsd_types:xsd_types",
        "@gtest//:main"
    ],
)

cc_library(
    name = "xsd_types",
    srcs = [
        "date_time.cc",
        "date_time_stamp.cc",
        "lang_string.cc",
        "error.cc",
    ],
    hdrs = [
        "xsd.h",
        "data_type.h",
        "date_time.h",
        "date_time_stamp.h",
        "lang_string.h",
        "error.h",
        "others.h"
    ],
)

