load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "xsd_types_test",
    srcs = ["xsd_types_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "//helpers/xsd_types:xsd_types",
        "@gtest//:main"
    ],
)

cc_library(
    name = "xsd_types",
    srcs = [
        "xsd_date_time.cc",
        "xsd_date_time_stamp.cc",
        "lang_string.cc",
        "xsd_error.cc",
    ],
    hdrs = [
        "xsd.h",
        "xsd_data_type.h",
        "xsd_string.h",
        "xsd_date_time.h",
        "xsd_date_time_stamp.h",
        "lang_string.h",
        "xsd_error.h",
        "others.h"
    ],
)

