load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_test(
  name = "shortcode_test",
  srcs = ["shortcode_test.cc"],
  copts = ["-Iexternal/stduuid/gsl"],
  deps = [
      ":dsp_types",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)

cc_test(
  name = "shortname_test",
  srcs = ["shortname_test.cc"],
  copts = ["-Iexternal/stduuid/gsl"],
  deps = [
      ":dsp_types",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)

cc_test(
  name = "id_test",
  srcs = ["id_test.cc"],
  copts = ["-Iexternal/stduuid/gsl"],
  deps = [
      ":dsp_types",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)


cc_library(
    name = "dsp_types",
    srcs = [
        "shortcode.cc",
        "shortname.cc",
        "id.cc"
    ],
    hdrs = [
        "shortcode.h",
        "shortname.h",
        "id.h",
    ],
    deps = [
        "//shared",
        "//shared/error",
        "//shared/xsd_types",
        "//third_party/stduuid"
    ],
)
