load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "email",
    srcs = ["email.cc"],
    hdrs = ["email.h"],
    deps = [
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "email_test",
    srcs = ["email_test.cc"],
    size = "small",
    deps = [
      ":email",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "family_name",
    srcs = ["family_name.cc"],
    hdrs = ["family_name.h"],
    deps = [
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "family_name_test",
    srcs = ["family_name_test.cc"],
    size = "small",
    deps = [
      ":family_name",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "given_name",
    srcs = ["given_name.cc"],
    hdrs = ["given_name.h"],
    deps = [
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "given_name_test",
    srcs = ["given_name_test.cc"],
    size = "small",
    deps = [
      ":given_name",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "identifier",
    srcs = ["identifier.cc"],
    hdrs = ["identifier.h"],
    deps = [
        "//shared",
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "identifier_test",
    srcs = ["identifier_test.cc"],
    size = "small",
    deps = [
      ":identifier",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "lang",
    srcs = ["lang.cc"],
    hdrs = ["lang.h"],
    deps = [
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "lang_test",
    srcs = ["lang_test.cc"],
    size = "small",
    deps = [
      ":lang",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "password",
    srcs = ["password.cc"],
    hdrs = ["password.h"],
    deps = [
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "password_test",
    srcs = ["password_test.cc"],
    size = "small",
    deps = [
      ":password",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "status",
    srcs = ["status.cc"],
    hdrs = ["status.h"],
    deps = [
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "status_test",
    srcs = ["status_test.cc"],
    size = "small",
    deps = [
      ":status",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "token",
    srcs = ["token.cc"],
    hdrs = ["token.h"],
    deps = [
        "//shared/xsd_types",
    ],
)

cc_test(
    name = "token_test",
    srcs = ["token_test.cc"],
    size = "small",
    deps = [
      ":token",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
    ],
)

cc_library(
    name = "username",
    srcs = ["username.cc"],
    hdrs = ["username.h"],
    deps = [
        "//shared",
        "//shared/xsd_types"
    ],
)

cc_test(
  name = "username_test",
  srcs = ["username_test.cc"],
  size = "small",
  deps = [
      ":username",
      "//shared/error",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
  ],
)
