load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "error",
    srcs = [
        "error.cc",
    ],
    hdrs = [
        "error.h",
    ],
    deps = [
        "@fmt//:fmt",
    ]
)

cc_test(
  name = "error_test",
  srcs = ["error_test.cc"],
  deps = [
      "@fmt//:fmt",
      "@catch2//:catch2_with_main",
      "//shared/error",
  ],
)
