load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_test(
  name = "generic_object_description_test",
  srcs = ["generic_object_description_test.cc"],
  deps = [
      "//tests:test_main",
      "//shared/generic_object_description",
      "//shared/xsd_types",
      "@catch2//:catch2",
  ],
)


cc_library(
    name = "generic_object_description",
    srcs = [
        "generic_object_description.cc",
    ],
    hdrs = [
        "generic_object_description.h",
    ],
    deps = [
        "//shared/error",
        "//shared/xsd_types",
    ],
)