load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "generic_object_description",
    srcs = [
        "generic_object_description.cc",
    ],
    hdrs = [
        "generic_object_description.h",
    ],
    deps = [
        "//shared/error",
        "//shared/xsd_types",
    ],
)

cc_test(
  name = "generic_object_description_test",
  srcs = ["generic_object_description_test.cc"],
  deps = [
      ":generic_object_description",
      "//shared/xsd_types",
      "@catch2//:catch2_with_main",
  ],
)
