load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "create_user",
    srcs = ["create_user.cc"],
    hdrs = ["create_user.h"],
    deps = [
        "//admin-cmd-srvc/src/entity:user",
        "//admin-cmd-srvc/src/usecase/port:i_user_repository",
        "//shared/error",
    ],
)

cc_library(
    name = "find_user",
    srcs = ["find_user.cc"],
    hdrs = ["find_user.h"],
    deps = [
        "//shared/error",
    ],
)
