load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "create_user",
    srcs = ["create_user.cc"],
    size = "small",
    deps = [
        "//admin-cmd-srvc/src/entity:user",
        "//admin-cmd-srvc/src/usecase:create_user",
        "//admin-cmd-srvc/src/adapter/repository:in_memory_user_repository",
        "//shared/error",
        "@catch2//:catch2_with_main",
    ],
)

#cc_test(
#    name = "find_user",
#    srcs = ["find_user.cc"],
#    size = "small",
#    deps = [
#        "//admin-cmd-srvc/src/entity:user",
#        "//admin-cmd-srvc/src/usecase:find_user",
#        "//admin-cmd-srvc/src/adapter/repository:in_memory_user_repository",
#        "//shared/error",
#        "@catch2//:catch2_with_main",
#    ],
#)
