load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "values",
    srcs = [],
    deps = [
        ":username"
    ],
)

cc_library(
    name = "username",
    srcs = ["username.cc"],
    hdrs = ["username.h"],
    deps = [
        "//entities:error",
    ],
)

cc_test(
  name = "username_test",
  srcs = ["username_test.cc"],
  size = "small",
  deps = [
      ":username",
      "//entities:error",
      "//tests:test_main",
      "@catch2//:catch2",
  ],
)